recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:5: error: type mismatch;
 found   : List[Int]
 required: Int
	l.tail::nlast(l.tail,n-1)
              ^