recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
	if(n==0)
	Nil
	else
	l.tail::nlast(l.tail,n-1)
}
